gvb_interp/src/snapshots/gvb_interp__vm__tests__expr__r#fn.snap
---
source: gvb_interp/src/vm.rs
expression: device.log.borrow()

---
print "127"
flush
print "1"
flush

